--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             <div class="plan-box">
                 <div data-aos="zoom-in" data-aos-duration="2000">
                     <h3>Premium</h3>
-                    <p class="plan-price">$399 <span>/ month</span></p>
-                    <p class="plan-price-meal">That's only 13.905$ per meal</p>
+                    <p class="plan-price">&#8377 399 <span>/ month</span></p>
+                    <p class="plan-price-meal">That's only 13.905 &#8377 per meal</p>
                 </div>
                 <div>
                     <ul>
